fix WebServer timeout

--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <title>Hide&Seek テストページ</title>
 </head>
-<body style="color:blue">
+<body style="color:black">
 <center>
-<img src=main.jpg>
+<img src=main.jpg width=100%>
 
 <h1>Hide&Seek</h1>
-TEST
+aaaaaaa
 </body>
 </html>
 
